--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.7",
+    "gulp-concat": "^2.3.4",
     "gulp-jshint": "^1.8.4",
     "gulp-nodemon": "^1.0.4",
     "gulp-sass": "^0.7.3",
