--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.8.7",
     "gulp-concat": "^2.3.4",
     "gulp-jshint": "^1.8.4",
+    "gulp-livereload": "^2.1.0",
     "gulp-nodemon": "^1.0.4",
     "gulp-sass": "^0.7.3",
     "jshint-stylish": "^0.4.0"
