--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,9 @@
   "name": "fixie",
   "dependencies": {
     "angular": "~1.2.22",
+    "angular-animate": "~1.2.22",
     "angular-route": "~1.2.22",
     "angular-touch": "~1.2.22",
-    "foundation": "~5.3.3",
-    "angular-animate": "~1.2.22"
+    "foundation": "~5.3.3"
   }
 }
