--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "angular": "~1.2.22",
     "angular-animate": "~1.2.22",
+    "angular-resource": "~1.2.22",
     "angular-route": "~1.2.22",
     "angular-touch": "~1.2.22",
     "foundation": "~5.3.3"
