--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.8.4",
     "eyespect": "^0.1.10",
     "jade": "^1.5.0",
-    "morgan": "^1.2.2"
+    "lodash": "^2.4.1",
+    "morgan": "^1.2.2",
+    "request": "^2.40.0"
   },
   "devDependencies": {
     "gulp": "^3.8.7",
