--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular-resource": "~1.2.22",
     "angular-route": "~1.2.22",
     "angular-touch": "~1.2.22",
-    "foundation": "~5.3.3"
+    "foundation": "~5.3.3",
+    "lodash": "~2.4.1"
   }
 }
